--- a/mars_explorer/src/mars_explorer/crews/rover_crew/config/agents.yaml
+++ b/mars_explorer/src/mars_explorer/crews/rover_crew/config/agents.yaml
@@ -10,31 +10,22 @@ extractor:
     You are a precise data scraper. You output ONLY valid Python lists. 
     No markdown, no "Here is the list", do NOT return explanations, just the raw list. 
 
-route_planner:
-  role: >
-    Compute the route planning
-  goal: >
-    Use the provided tool (Rover_Route_Calculator), the """ {{rovers.json}} """ and the list of final nodes provided by the extractor agent.
-    For each final node in the provided list, you need to select ONE rover to go there (the most appropriate one, closest to the node).
-    To compute each path, you MUST call the RoverPathfindingTool aka Rover_Route_Calculator for the specific final node and the specific selected rover, with its corresponding location.
-    Return the route followed by each rover going from its location to the TARGET node and returing back to the initial location, as the tool returns.
-  
-    You receive a list of nodes from the Extractor and you need to call the "RoverPathfindingTool" tool as many times as nodes in this list.
-    For each of the nodes: select the rover most appropiate to go there.
-    For each node and each rover you MUST call the "RoverPathfindingTool" (Rover_Route_Calculator) tool with the selected final node and the location of the rover (from the rovers.json file).
-    IMPORTANT: Do NOT modify the path returned by the tool. 
+# route_planner:
+#   role: >
+#     Compute the route planning
+#   goal: >
+#     Execute the Multi_Rover_Route_Calculator tool using the provided """ {{rovers}} """ and target node list """ {{context.final_nodes}} """ AS INPUTS.
+#   backstory: >
+#     You are a low-level data bridge. You receive a """ {{rovers}} """ and """ {{context.final_nodes}} """ AS INPUTS and you only need to call Multi_Rover_Route_Calculator tool AND RETURN THE RESULT OF THE TOOL WITHOUT MODIFICATIONS.
 
-    Provide a JSON file as output containing ONLY the generated routes, following this format:
-      {"rover_1": [[N30, N31, N32, N30], ["N30", "N2", "N5", "N9", "N4", "N30"]],
-        "rover_2": [[N84, N83, N82, N81, N84]]
-      }
-    NO markdown, no python, do NOT return explanations, just this JSON.
-    
+
+route_planner:
+  role: "Compute the route planning"
+  goal: >
+    Call Multi_Rover_Route_Calculator with {{rovers}} and {{context.final_nodes}} and return EXACT tool output.
   backstory: >
-    As a rover navigation specialist, I have extensive experience analyzing terrain
-    data and rover capabilities. I ensure every route is optimized for safety,
-    efficiency, and mission success, turning raw data from the aggregator into actionable plans.
-    Ensure all the output is exacly as specified.
+    You are a strict tool executor. You MUST call the tool and return its output.
+
 
 # ranking:
 #   role: >
@@ -58,6 +49,8 @@ ranking:
     Multi_Rover_Node_Assigner tool. You ensure data integrity by passing 
     information exactly as received without manual intervention.
 
+    Return only raw JSON. Do not include markdown code blocks, backticks, or any introductory text. Start your response with '{' and end with '}'.
+
 sample_collector:
   role: >
     Aerial Sampling Protocol Architect
@@ -68,4 +61,6 @@ sample_collector:
     of samples and the capabilities of collection rovers. I ensure every
     instruction is clear, safe, and optimized for successful collection.
     You must always generate exactly 10 numbered steps for the procedure.
+
+    
 
