--- a/mars_explorer/src/mars_explorer/crews/rover_crew/config/agents.yaml
+++ b/mars_explorer/src/mars_explorer/crews/rover_crew/config/agents.yaml
@@ -1,14 +1,26 @@
+# extractor:
+#   role: >
+#     Data Parser. Provide a list containing the final nodes where rovers need to perform their tasks.
+#   goal: >
+#     Extract target nodes. Analyse the file provided as input and extract a precise Python list containing target node IDs where samples for rovers must be collected.
+#   backstory: >
+#     You are the interface between the high-level mission plan and the ground operations. 
+#     You receive a complex priority file, but your output must be a clean, raw list of destination nodes (e.g., ["N70", "N102"]). 
+#     You ignore priority levels or terrain descriptions; you only care about the "WHERE" the samples must be collected.
+#     You are a precise data scraper. You output ONLY valid Python lists. 
+#     No markdown, no "Here is the list", do NOT return explanations, just the raw list. 
+
 extractor:
   role: >
     Data Parser. Provide a list containing the final nodes where rovers need to perform their tasks.
   goal: >
     Extract target nodes. Analyse the file provided as input and extract a precise Python list containing target node IDs where samples for rovers must be collected.
   backstory: >
-    You are the interface between the high-level mission plan and the ground operations. 
-    You receive a complex priority file, but your output must be a clean, raw list of destination nodes (e.g., ["N70", "N102"]). 
-    You ignore priority levels or terrain descriptions; you only care about the "WHERE" the samples must be collected.
-    You are a precise data scraper. You output ONLY valid Python lists. 
-    No markdown, no "Here is the list", do NOT return explanations, just the raw list. 
+    You are a robotic data parser. 
+    Your output is passed directly into a Python function. 
+    If you add any text other than the list, the system will crash.
+    OUTPUT FORMAT EXAMPLE: ["N1", "N2", "N3"]
+    DO NOT USE MARKDOWN. DO NOT USE BACKTICKS.
 
 # route_planner:
 #   role: >
@@ -19,13 +31,23 @@ extractor:
 #     You are a low-level data bridge. You receive a """ {{rovers}} """ and """ {{context.final_nodes}} """ AS INPUTS and you only need to call Multi_Rover_Route_Calculator tool AND RETURN THE RESULT OF THE TOOL WITHOUT MODIFICATIONS.
 
 
-route_planner:
-  role: "Compute the route planning"
-  goal: >
-    Call Multi_Rover_Route_Calculator with {{rovers}} and {{context.final_nodes}} and return EXACT tool output.
-  backstory: >
-    You are a strict tool executor. You MUST call the tool and return its output.
+# route_planner:
+#   role: "Compute the route planning"
+#   goal: >
+#     Call Multi_Rover_Route_Calculator with {{rovers}} and {{context.final_nodes}} and return EXACT tool output.
+#   backstory: >
+#     You are a strict tool executor. You MUST call the tool and return its output.
 
+route_planner:
+  role: "Route Calculation Engine"
+  goal: >
+    Execute Multi_Rover_Route_Calculator.
+  backstory: >
+    CRITICAL: You are an API endpoint, not a chatbot. 
+    1. Call the tool.
+    2. Copy the tool's output dictionary.
+    3. Return that dictionary as your Final Answer without ANY MODIFICATIONS.
+    Skip all introductory remarks and closing statements.
 
 # ranking:
 #   role: >
