--- a/mars_explorer/src/mars_explorer/crews/rover_crew/config/tasks.yaml
+++ b/mars_explorer/src/mars_explorer/crews/rover_crew/config/tasks.yaml
@@ -87,16 +87,35 @@ reporting_route:
 #     The final assignments dictionary produced by the tool.
 #   agent: ranking
 
+# task_ranking:
+#   description: >
+#     Assign the best rovers to target nodes based on the route and energy data 
+#     provided in the context. 
+    
+#     YOU MUST USE the 'Multi_Rover_Node_Assigner' tool WITH THE DICTIONARY FROM THE PREVIOUS AGENT AS INPUT to perform this calculation.
+#     Pass the entire context dictionary to the tool's 'rover_results' argument.
+#     Do not attempt to create the assignments yourself or repeat the input data.
+#   expected_output: >
+#     The output from the Multi_Rover_Node_Assigner tool. DO NOT MODIFY THE OUTPUT.
+#   agent: ranking
+
+# task_ranking:
+#   description: >
+#     1. Take the route data provided in the context from the route_planner.
+#     2. Call the 'Multi_Rover_Node_Assigner' tool.
+#     3. For the 'rover_results' argument, provide the JSON/dictionary data exactly as it was output by the previous agent.
+#   expected_output: >
+#     The final assignments produced by the tool. DO NOT MODIFY THE OUTPUT.
+#   agent: ranking
+
 task_ranking:
   description: >
-    Assign the best rovers to target nodes based on the route and energy data 
-    provided in the context. 
-    
-    YOU MUST USE the 'Multi_Rover_Node_Assigner' tool WITH THE DICTIONARY FROM THE PREVIOUS AGENT AS INPUT to perform this calculation.
-    Pass the entire context dictionary to the tool's 'rover_results' argument.
-    Do not attempt to create the assignments yourself or repeat the input data.
+    1. Access the data from the previous task (reporting_route).
+    2. Locate the 'results' dictionary within that output.
+    3. Call the 'Multi_Rover_Node_Assigner' tool using that 'results' dictionary as the 'rover_results' argument.
+    4. RETURN THE RESULT OF THE TOOL WITHOUT MODIFICATIONS.
   expected_output: >
-    The output from the Multi_Rover_Node_Assigner tool. DO NOT MODIFY THE OUTPUT.
+    The OUTPUT returned by the Multi_Rover_Node_Assigner tool WITHOUT MODIFICATIONS. DO NOT ADD INFORMATION
   agent: ranking
 
 reporting_sampling:
