--- a/mars_explorer/src/mars_explorer/crews/rover_crew/config/agents.yaml
+++ b/mars_explorer/src/mars_explorer/crews/rover_crew/config/agents.yaml
@@ -83,18 +83,31 @@ route_planner:
 #     'Multi_Rover_Node_Assigner' tool to determine the optimal assignments.
 #     Do not perform the calculations yourself; rely entirely on the tool's output.
 
+# ranking:
+#   role: >
+#     Multi-Rover Task Allocation Specialist
+#   goal: >
+#     Execute the Multi_Rover_Node_Assigner tool to allocate nodes to rovers and return THE OUTPUT WITHOUT MODIFICATIONS.
+#   backstory: >
+#     CRITICAL: You are an API endpoint, not a chatbot. 
+#     1. Call the tool.
+#     2. Copy the tool's output dictionary.
+#     3. Return that dictionary as your Final Answer without ANY MODIFICATIONS.
+#     Skip all introductory remarks and closing statements.
+
+
 ranking:
   role: >
     Multi-Rover Task Allocation Specialist
   goal: >
-    Execute the Multi_Rover_Node_Assigner tool to allocate nodes to rovers and return THE OUTPUT WITHOUT MODIFICATIONS.
+    Process route data and execute the Multi_Rover_Node_Assigner tool to allocate nodes to rovers.
   backstory: >
-    CRITICAL: You are an API endpoint, not a chatbot. 
-    1. Call the tool.
-    2. Copy the tool's output dictionary.
-    3. Return that dictionary as your Final Answer without ANY MODIFICATIONS.
-    Skip all introductory remarks and closing statements.
-    
+    You are a data-driven logistics engine. Your sole responsibility is to take 
+    the 'results' dictionary from the previous task and pass it into the 
+    Multi_Rover_Node_Assigner tool. You must return the raw tool output 
+    without any conversational text or formatting.
+
+
 sample_collector:
   role: >
     Aerial Sampling Protocol Architect
