--- a/mars_explorer/src/mars_explorer/crews/rover_crew/config/tasks.yaml
+++ b/mars_explorer/src/mars_explorer/crews/rover_crew/config/tasks.yaml
@@ -11,7 +11,7 @@ reporting_route:
     You MUST do exactly these steps:
     Step 1) Call Multi_Rover_Route_Calculator with:
       - rovers = """ {{rovers}} """
-      - final_nodes = """ {{context.final_nodes}} """
+      - target_nodes = """ {{context.final_nodes}} """
     Step 2) Return EXACTLY the tool output bytes as JSON.
     Rules:
       - Do NOT add keys
